--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <html>
-
-
+<head> <link rel="stylesheet" href="style.css">
+ <head>
+    <link rel="icon" href="http://images.shoutwiki.com/sanrio/2/23/Cinnamoroll.png">
+    <title> TAB TITLE </title>
+  </head>
+ <body>
+   <ul>
+     <li> <a href="https://code.org/">CODE.ORG </a></li>
+     <li> <a href="https://www.powayusd.com/en-US/Schools/HS/WVHS/HOME">WESTVIEW HOMEPAGE </a> </li>
+     <li> <a href="https://www.nytimes.com/games/wordle/index.html"> DAILY WORDLE </a> </li>
+   </ul>
+   <br>
+  <center>
+  <h2> ~Welcome to CSP~ </h2>
+  <p> Fall 2022 app Lab Projects </p>
+     <img src= "https://csc.as.miami.edu/_assets/images/homepage/fixed-width-slider/shutterstock_480_160.jpg"> </img>
+  <br>
+  <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/fmfTGPKP4eb04gseff9OX4M_yvT--wEDUD0ecJ_2I1g/embed"></iframe>
+    
+  </center>
+  </body>
 
 
 
