--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <html>
   <head>
-    
-    </style>
+    <link rel= "stylesheet" href="style.css">
     <link rel="icon" href="http://images.shoutwiki.com/sanrio/2/23/Cinnamoroll.png">
     <title> TAB TITLE </title>
   </head>
