--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
-  <head>
-    <link rel= "stylesheet" href="style.css">
+ <head><link rel= "stylesheet" href="style.css">
     <link rel="icon" href="http://images.shoutwiki.com/sanrio/2/23/Cinnamoroll.png">
-    <title> TAB TITLE </title>
+    <title> CSP 2022 </title>
   </head>
  <body>
 
