--- a/APPS.html
+++ b/APPS.html
@@ -16,6 +16,8 @@
     <br>
 <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/cfdrtp_Vq7otw8Rmdgf39iSC0OEOAMS4r2495oAAkXM/embed"></iframe>
 <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/fmfTGPKP4eb04gseff9OX4M_yvT--wEDUD0ecJ_2I1g/embed"></iframe>
+      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/IADc9HwFkUX5TT-hS4yhPCKjKrK-8bsHtYgiFETSKEA/embed"></iframe>
+      <iframe width="392" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/E7fnvrajN3OEpQJQbgRVBkTunGrQ-oOb7tiFS9u1RuE/embed"></iframe>
     
    
       </center>
