--- a/APPS.html
+++ b/APPS.html
@@ -1,5 +1,5 @@
 <html>
-  <head> <link rel="stylesheet" href="interactivesstyle.css">
+  <head> <link rel="stylesheet" href="APPSTYLE.css">
     <head>
     <link rel="icon" href="https://cdn.mos.cms.futurecdn.net/yCPyoZDQBBcXikqxkeW2jJ-1200-80.jpg">
     <title> FALL 2022 CSP </title>
